# lunaWidgets

./: .gitignore  .prettierrc  CHANGELOG.md  LICENSE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
public/: plugin-runner.html  plugin.js  template.html
scripts/: bump-version.js
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin-runner.json  template.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  http.rs  mod.rs  settings.rs  system.rs  window.rs
src-tauri/src/imports/: morphdom.min.js  widget-api.js  widget-base.css
src/components/: BlockRenderer.module.css  BlockRenderer.tsx  BoardViewRenderer.module.css  BoardViewRenderer.tsx  DatabaseRenderer.tsx  SetupScreen.module.css  SetupScreen.tsx  TitleBar.module.css  TitleBar.tsx
src/hooks/: useDrag.ts  useDragDrop.ts  useNotionPage.ts
src/services/: config.ts  notion.ts
src/styles/: global.css
src/types/: notion.ts
src/utils/: tools.ts
widgets/calendar/: config.json  style.css  template.mustache  widget.js  widget.json
widgets/clock/: style.css  template.html  template.mustache  widget.js  widget.json
widgets/notion-board/: config.json  style.css  template.html  template.mustache  widget.js  widget.json
widgets/process-monitor/: style.css  template.mustache  widget.js  widget.json
widgets/system/: style.css  template.mustache  widget.js  widget.json
widgets/weather/: config.json  style.css  template.mustache  weather-icons.min.css  widget.js  widget.json
