[package]
name = "notion-widget"
version = "0.1.0"
description = "A desktop widget for Notion pages"
authors = ["Pablo"]
edition = "2021"

[lib]
name = "notion_widget_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
