[package]
name = "luna-widgets"
version = "0.1.0"
description = "A widget system for desktop using JS and mustache"
authors = ["Pablo M Dorr"]
edition = "2021"

[lib]
name = "notion_widget_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
